--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/graphql": "^11.0.4",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.12"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
